--- a/MadLibs/Views/Home/Form1.cshtml
+++ b/MadLibs/Views/Home/Form1.cshtml
@@ -7,19 +7,19 @@
   </head>
   <body>
     <h1>Fill the blanks to complate the sentence.</h1>
-    <form action="/MadLibOne" method="post">
+    <form action="/madlib1" method="post">
       <label for="name">Name</label>
       <input id="name" name="name" type="text">
 
       <label for="place">Place</label>
       <input id="place" name="place" type="text">
 
-      <label for="seoson">Seoson</label>
-      <input id="seoson" name="seoson" type="text">
+      <label for="season">Season</label>
+      <input id="season" name="season" type="text">
 
-      <label for="explamation">Explamation</label>
-      <input id="explamation" name="explamation" type="text">
-      
+      <label for="exclamation">Exclamation</label>
+      <input id="exclamation" name="exclamation" type="text">
+
       <button type="submit">Submit</button>
     </form>
   </body>
