--- a/MadLibs/Views/Home/MadLib1.cshtml
+++ b/MadLibs/Views/Home/MadLib1.cshtml
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Travel</h1>
-    <p>Travel to the @Model.GetPlace() was @Model.GetName()'s dream. Last @Model.GetSeason() he went to @Model.GetPlace(). @Model.GetName() was so exited and said @Model.GetExclamation()!</p>
+    <p>Travel to the @Model.GetPlace() was @Model.GetName()'s dream. Last @Model.GetSeason() he went to @Model.GetPlace(). @Model.GetName() was so excited and said @Model.GetExclamation()!</p>
   </body>
 </html>
