--- a/MadLibs/Views/Home/MadLib2.cshtml
+++ b/MadLibs/Views/Home/MadLib2.cshtml
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Travel</h1>
-    <p>@Model.GetName() lost in the forest. In the deep of the forest saw a @Model.GetAdjective house and strange voices lika a  @Model.GetExclamation(). The weather was cloudy and dark, lika a dark @Model.GetSeason() days</p>
+    <p>@Model.GetName() lost in the forest. In the deep of the forest saw a @Model.GetAdjective() house and strange voices like a  @Model.GetExclamation(). The weather was cloudy and dark, like a dark @Model.GetSeason() days</p>
   </body>
 </html>
