--- a/MadLibs/Views/Home/Form2.cshtml
+++ b/MadLibs/Views/Home/Form2.cshtml
@@ -6,19 +6,19 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-    <h1>Fill the blanks to complate the story.</h1>
-    <form action="/MadLibTwo" method="post">
+    <h1>Fill the blanks to complete the story.</h1>
+    <form action="/madlib2" method="post">
       <label for="name">Name</label>
       <input id="name" name="name" type="text">
 
       <label for="adjective">An adjective</label>
       <input id="adjective" name="adjective" type="text">
 
-      <label for="explamation">Explamation</label>
-      <input id="explamation" name="explamation" type="text">
+      <label for="exclamation">Exclamation</label>
+      <input id="exclamation" name="exclamation" type="text">
 
-      <label for="seoson">Seoson</label>
-      <input id="seoson" name="seoson" type="text">
+      <label for="season">Season</label>
+      <input id="season" name="season" type="text">
 
       <button type="submit">Submit</button>
     </form>
